CAMEL-16484: camel-dropbox - Bump to Dropbox 5.4.2 (#8547)
## Motivation 

The version of Dropbox used is outdated (3.2.0) so it needs to be upgraded to the latest version.

## Modifications:

* Fix the existing doc and tests
* Fix the warnings and deprecated code
* Upgrade Dropbox to 5.4.2