@@ -23,10 +23,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.AbstractMap;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 
 import com.dropbox.core.DbxDownloader;
@@ -36,8 +34,8 @@ import com.dropbox.core.v2.files.FileMetadata;
 import com.dropbox.core.v2.files.ListFolderErrorException;
 import com.dropbox.core.v2.files.ListFolderResult;
 import com.dropbox.core.v2.files.Metadata;
-import com.dropbox.core.v2.files.SearchMatch;
-import com.dropbox.core.v2.files.SearchResult;
+import com.dropbox.core.v2.files.SearchOptions;
+import com.dropbox.core.v2.files.SearchV2Result;
 import com.dropbox.core.v2.files.WriteMode;
 import org.apache.camel.Exchange;
 import org.apache.camel.component.dropbox.dto.DropboxDelResult;
@@ -50,7 +48,6 @@ import org.apache.camel.component.dropbox.util.DropboxException;
 import org.apache.camel.component.dropbox.util.DropboxResultCode;
 import org.apache.camel.component.dropbox.util.DropboxUploadMode;
 import org.apache.camel.support.builder.OutputStreamBuilder;
-import org.apache.camel.util.IOHelper;
 import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -83,7 +80,7 @@ public final class DropboxAPIFacade {
      *                          case a file with the same name already exists on dropbox. in case of "force" the file
      *                          already existing with the same name will be overridden.
      * @return                  a result object reporting for each remote path the result of the operation.
-     * @throws DropboxException
+     * @throws DropboxException if an error occurs
      */
     public DropboxFileUploadResult put(String localPath, String remotePath, DropboxUploadMode mode) throws DropboxException {
         // in case the remote path is not specified, the remotePath = localPath
@@ -114,10 +111,8 @@ public final class DropboxAPIFacade {
             }
             // in case the entry not exists on dropbox check if the filename
             // should be appended
-            if (!isPresent) {
-                if (dropboxPath.endsWith(DropboxConstants.DROPBOX_FILE_SEPARATOR)) {
-                    dropboxPath = dropboxPath + fileLocalPath.getName();
-                }
+            if (!isPresent && dropboxPath.endsWith(DropboxConstants.DROPBOX_FILE_SEPARATOR)) {
+                dropboxPath = dropboxPath + fileLocalPath.getName();
             }
 
             LOG.debug("Uploading: {},{}", fileLocalPath, dropboxPath);
@@ -192,10 +187,8 @@ public final class DropboxAPIFacade {
 
         // in case the entry not exists on dropbox check if the filename should
         // be appended
-        if (!isPresent) {
-            if (dropboxPath.endsWith(DropboxConstants.DROPBOX_FILE_SEPARATOR)) {
-                dropboxPath = dropboxPath + name;
-            }
+        if (!isPresent && dropboxPath.endsWith(DropboxConstants.DROPBOX_FILE_SEPARATOR)) {
+            dropboxPath = dropboxPath + name;
         }
 
         LOG.debug("Uploading message body: {}", dropboxPath);
@@ -215,87 +208,69 @@ public final class DropboxAPIFacade {
     }
 
     private FileMetadata putSingleFile(File inputFile, String dropboxPath, DropboxUploadMode mode) throws Exception {
-        FileInputStream inputStream = new FileInputStream(inputFile);
-        FileMetadata uploadedFile;
-        try {
+        try (FileInputStream inputStream = new FileInputStream(inputFile)) {
             WriteMode uploadMode;
             if (mode == DropboxUploadMode.force) {
                 uploadMode = WriteMode.OVERWRITE;
             } else {
                 uploadMode = WriteMode.ADD;
             }
-            uploadedFile = client.files().uploadBuilder(dropboxPath).withMode(uploadMode).uploadAndFinish(inputStream,
+            return client.files().uploadBuilder(dropboxPath).withMode(uploadMode).uploadAndFinish(inputStream,
                     inputFile.length());
-            return uploadedFile;
-        } finally {
-            IOHelper.close(inputStream);
         }
     }
 
     private FileMetadata putSingleBody(Exchange exchange, String dropboxPath, DropboxUploadMode mode) throws Exception {
         byte[] data = exchange.getIn().getMandatoryBody(byte[].class);
-        InputStream is = new ByteArrayInputStream(data);
-        try {
-            FileMetadata uploadedFile;
-            WriteMode uploadMode;
+        try (InputStream is = new ByteArrayInputStream(data)) {
+            final WriteMode uploadMode;
             if (mode == DropboxUploadMode.force) {
                 uploadMode = WriteMode.OVERWRITE;
             } else {
                 uploadMode = WriteMode.ADD;
             }
-            uploadedFile = client.files().uploadBuilder(dropboxPath).withMode(uploadMode).uploadAndFinish(is, data.length);
-            return uploadedFile;
-        } finally {
-            IOHelper.close(is);
+            return client.files().uploadBuilder(dropboxPath).withMode(uploadMode).uploadAndFinish(is, data.length);
         }
     }
 
     /**
-     * Search inside a remote path including its sub directories. The query param can be null.
+     * Search inside a remote path including its subdirectories. The query param can be null.
      *
      * @param  remotePath       the remote path where starting the search from
      * @param  query            a space-separated list of substrings to search for. A file matches only if it contains
      *                          all the substrings
      * @return                  a result object containing all the files found.
-     * @throws DropboxException
+     * @throws DropboxException if an error occurs
      */
     public DropboxSearchResult search(String remotePath, String query) throws DropboxException {
-        SearchResult listing;
-        List<SearchMatch> searchMatches;
         if (query == null) {
             LOG.debug("Search no query");
-            try {
-                listing = client.files().search(remotePath, null);
-                searchMatches = listing.getMatches();
-                return new DropboxSearchResult(searchMatches);
-            } catch (DbxException e) {
-                throw new DropboxException(remotePath + " does not exist or cannot obtain metadata", e);
-            }
         } else {
             LOG.debug("Search by query: {}", query);
-            try {
-                listing = client.files().search(remotePath, query);
-                searchMatches = listing.getMatches();
-                return new DropboxSearchResult(searchMatches);
-            } catch (DbxException e) {
-                throw new DropboxException(remotePath + " does not exist or cannot obtain metadata", e);
-            }
+        }
+        try {
+            SearchV2Result listing = client.files().searchV2Builder(query)
+                    .withOptions(SearchOptions.newBuilder().withPath(remotePath).build())
+                    .start();
+            return new DropboxSearchResult(listing.getMatches());
+        } catch (DbxException e) {
+            throw new DropboxException(String.format("%s does not exist or cannot obtain metadata", remotePath), e);
         }
     }
 
     /**
-     * Delete every files and subdirectories inside the remote directory. In case the remotePath is a file, delete the
+     * Delete every file and subdirectory inside the remote directory. In case the remotePath is a file, delete the
      * file.
      *
      * @param  remotePath       the remote location to delete
      * @return                  a result object with the result of the delete operation.
-     * @throws DropboxException
+     * @throws DropboxException if an error occurs
      */
     public DropboxDelResult del(String remotePath) throws DropboxException {
         try {
             client.files().deleteV2(remotePath);
         } catch (DbxException e) {
-            throw new DropboxException(remotePath + " does not exist or cannot obtain metadata", e);
+            throw new DropboxException(String.format("%s does not exist or cannot obtain metadata", remotePath), e);
         }
         return new DropboxDelResult(remotePath);
     }
@@ -306,7 +281,7 @@ public final class DropboxAPIFacade {
      * @param  remotePath       the existing remote path to be renamed
      * @param  newRemotePath    the new remote path substituting the old one
      * @return                  a result object with the result of the move operation.
-     * @throws DropboxException
+     * @throws DropboxException if an error occurs
      */
     public DropboxMoveResult move(String remotePath, String newRemotePath) throws DropboxException {
         try {
@@ -323,7 +298,7 @@ public final class DropboxAPIFacade {
      * @param  remotePath       the remote path where to download from
      * @return                  a result object with the content (ByteArrayOutputStream) of every files inside the
      *                          remote path.
-     * @throws DropboxException
+     * @throws DropboxException if an error occurs
      */
     public DropboxFileDownloadResult get(String remotePath) throws DropboxException {
         return new DropboxFileDownloadResult(downloadFilesInFolder(remotePath));
@@ -334,18 +309,24 @@ public final class DropboxAPIFacade {
             ListFolderResult folderResult = client.files().listFolder(path.equals("/") ? "" : path);
             Map<String, Object> returnMap = new LinkedHashMap<>();
             for (Metadata entry : folderResult.getEntries()) {
-                returnMap.put(entry.getPathDisplay(), downloadSingleFile(entry.getPathDisplay()).getValue());
+                Map.Entry<String, Object> singleFile = downloadSingleFile(entry.getPathDisplay());
+                if (singleFile == null) {
+                    continue;
+                }
+                returnMap.put(entry.getPathDisplay(), singleFile.getValue());
             }
             return returnMap;
         } catch (ListFolderErrorException e) {
-            try {
-                DbxDownloader<FileMetadata> listing = client.files().download(path);
+            try (DbxDownloader<FileMetadata> listing = client.files().download(path)) {
                 if (listing == null) {
-                    return Collections.emptyMap();
+                    return Map.of();
                 } else {
                     LOG.debug("downloading a single file...");
                     Map.Entry<String, Object> entry = downloadSingleFile(path);
-                    return Collections.singletonMap(entry.getKey(), entry.getValue());
+                    if (entry == null) {
+                        return Map.of();
+                    }
+                    return Map.of(entry.getKey(), entry.getValue());
                 }
             } catch (DbxException dbxException) {
                 throw new DropboxException(dbxException);
@@ -356,16 +337,14 @@ public final class DropboxAPIFacade {
     }
 
     private Map.Entry<String, Object> downloadSingleFile(String path) throws DropboxException {
-        try {
-            OutputStreamBuilder target = OutputStreamBuilder.withExchange(exchange);
-            DbxDownloader<FileMetadata> downloadedFile = client.files().download(path);
-            if (downloadedFile != null) {
-                downloadedFile.download(target);
-                LOG.debug("downloaded path={}", path);
-                return new AbstractMap.SimpleEntry<>(path, target.build());
-            } else {
+        try (OutputStreamBuilder target = OutputStreamBuilder.withExchange(exchange);
+             DbxDownloader<FileMetadata> downloadedFile = client.files().download(path)) {
+            if (downloadedFile == null) {
                 return null;
             }
+            downloadedFile.download(target);
+            LOG.debug("downloaded path={}", path);
+            return new AbstractMap.SimpleEntry<>(path, target.build());
         } catch (DbxException e) {
             throw new DropboxException(path + " does not exist or cannot obtain metadata", e);
         } catch (IOException e) {
